fixed alignment

--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ header ul li :hover {
 	display: inline-block;
 
 	margin: 3%;
+	padding-right: 3%;
 	scroll-snap-align: center;
 }
 
